<resources>
    <string name="app_name">Parklux Admin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="qr_announce">Please be safe and park on your slot. Have a nice day!</string>
    <string name="generate_qr">Generate QR</string>
    <string name="scan">Scan</string>
    <string name="me">Me …</string>
    <string name="slot_name">Slot name</string>
    <string name="edit_mode">Edit mode</string>
    <string name="view_section">View section</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="price_hour">Price/hour</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="date_now">It\'s %s</string>
    <string name="welcome_to_s">Welcome to %s</string>
    <string name="two_value_comma">%s, %s</string>
    <string name="two_value_newline">%s\nIDR %s/hour</string>
    <string name="open_hour_nprice">Opening hour\nPrice</string>
    <string name="deactivate">D\ne\na\nc\nt\ni\nv\na\nt\ne</string>
    <string name="activate">A\nc\nt\ni\nv\na\nt\ne</string>
    <string name="exit_edit_mode">Exit edit mode</string>
    <string name="cancel">Cancel</string>
    <string name="i_have_read">I have read the About Level of Parking Management System</string>
    <string name="about_level">About Level</string>
    <string name="about_pms">- The level have 4 sections\n- Each section have 900 slots\n- Total slots on one level are 3600 slots\n- The slots can be set as Parking Slot / Disable Slot / Road / etc.\n- You can activate/deactivate section on view section page\n- You can edit the slot on the section after the section is activated\n- You can\'t deactivate the section  edit the slot with ongoing parking on there</string>
    <string name="level_name">Level name</string>
    <string name="new_level">New level</string>
    <string name="create">Create</string>
    <string name="range2">%s - %s</string>
    <string name="idr_price">IDR %s</string>
    <string name="expires_in">Expires in: %s : %s</string>
    <string name="parking_slot_full">Parking slot full</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="update_parking_level">Update parking level</string>
    <string name="status">Status</string>
    <string name="delete_details">Once you delete your parking level, there is no going back. Please be certain. You can\'t delete level when still have ongoing parking on there</string>
    <string name="unavailable_details">"When set this level into \"Unavailable\" this level won\'t be able to edit and booking until you set this level into Available. You can\'t set this level into \"Unavailable\" when there are still ongoin parking in this level"</string>
    <string name="ok">Ok</string>
    <string name="caution">Caution</string>
    <string name="failed">Failed</string>
    <string name="still_ongoing_parking">There are still ongoing parking on this level</string>
    <string name="success_high">Success !</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="automatically_refresh_20s">Automatically refresh parking layout every 20 seconds</string>
    <string name="fill_all_the_entries">Fill all the entries</string>
    <string name="activate_this_section">Activate the section first to edit this slot</string>
    <string name="success_create_level">Success create level</string>
    <string name="deactivate_section">Deactivate section</string>
    <string name="deactivate_section_confirmation">Are you sure you want to deactivate this section?</string>
    <string name="cant_deactivate_section">Can\'t deactivate this section</string>
    <string name="still_have_ongoin_this_section">Still have ongoing parking on this section</string>
    <string name="this_level_status_is_unavailable">This level status is Unavailable</string>
    <string name="close_hours">Close hours</string>
    <string name="open_hours">Open hours</string>
    <string name="slot_number">Slot number</string>
    <string name="force_update_message">You will force update this slot, if you change this slot state, the booking of this parking slot will be completed after you press Save button</string>
    <string name="home">Home</string>
    <string name="qr">QR</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="swipe_up_to_add_level">Swipe up to add level</string>
    <string name="completed">Completed</string>
    <string name="you_don_t_have_any_ongoing_parking">You don\'t have any ongoing parking</string>
    <string name="ongoing">Ongoing</string>
    <string name="password_hint">********</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="image_name">image.jpg</string>
    <string name="image_jpeg">image/jpeg</string>
    <string name="file">file</string>
    <string name="no_network_connection">No network connection</string>
    <string name="opening_hours">Opening hours</string>
    <string name="delete_level">Delete level</string>
    <string name="empty_slot">Empty slot</string>
    <string name="taken_slot">Taken slot</string>
    <string name="disable_slot">Disable slot</string>
    <string name="email_password_incorrect">The email or password is incorrect.</string>
    <string name="parklux">Parklux</string>
    <string name="you_don_t_have_any_ongoing_order">You don\'t have any ongoing order</string>
    <string name="you_dont_t_have_any_completed_order">You dont\'t have any completed order</string>
    <string name="add_level">Add level</string>
    <string name="cant_delete_level_details">You can\'t delete this level when there are still ongoing parking on this level, or you can force complete the ongoing paring from the edit level menu and change the taken slot with another slot status</string>
    <string name="section_1">Section - 1</string>
    <string name="section_2">Section - 2</string>
    <string name="section_3">Section - 3</string>
    <string name="section_4">Section - 4</string>
    <string name="select_slot">Select slot on the right side</string>
    <string name="edit_profile">Edit profile</string>
    <string name="login_activity">Login Activity</string>
    <string name="click_again_exit">Please click back again to exit</string>
    <string name="email_already_used">Failed to update profile, email already used!</string>
    <string name="updated">Updated</string>
    <string name="fill_all_entried">Please fill all the entries with valid input</string>
    <string name="thanks_using_dialog">Welcome to %s, your slot at level %s. Thanks for using Parklux apps!</string>
    <string name="hi_dialog">Hi, %s !</string>
    <string name="success_add_location">Success add location</string>
    <string name="fill_drop_point">Add the drop point by clicking the location button in edit mode</string>
    <string name="exit_edit_mode_title">Exit edit mode?</string>
    <string name="exit_edit_mode_descritption">Do you want to exit edit mode?\nYour changes will be gone</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,.()-</string>
    <string name="digits_number">+0123456789</string>
    <string name="scan_the_qr">The QR code will be detected automatically once you have positioned the code within the scan.</string>
    <string name="checkout_booking_success">Checkout booking success!</string>
    <string name="checkout_booking_failed">Checkout booking failed!</string>
    <string name="scan_qr">Scan QR</string>
    <string name="go_to_generate_qr_page">Go to generate QR page</string>
    <string name="view_level_layout">View level layout</string>
    <string name="set_slot_status">Set slot status</string>
    <string name="blank_slot">Blank slot</string>
    <string name="entrance">Entrance</string>
    <string name="exit">Exit</string>
    <string name="obstacle">Obstacle</string>
    <string name="change_image">Change image</string>
</resources>
