<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/twelve_dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <org.apmem.tools.layouts.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_park" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_slot"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:layout_marginEnd="@dimen/four_dp"
                android:tint="@color/red"
                app:srcCompat="@drawable/ic_disable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_slot"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:layout_marginEnd="@dimen/four_dp"
                app:srcCompat="@drawable/ic_blank" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank_slot"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:layout_marginEnd="@dimen/four_dp"
                android:tint="@color/darkGrey"
                app:srcCompat="@drawable/ic_car" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taken_slot"
                android:textColor="@color/darkGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:layout_marginEnd="@dimen/four_dp"
                android:tint="@color/darkGrey"
                app:srcCompat="@drawable/ic_in" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrance"
                android:textColor="@color/goldDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:layout_marginEnd="@dimen/four_dp"
                app:srcCompat="@drawable/ic_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twelve_dp">

            <ImageView
                android:layout_width="@dimen/twenty_dp"
                android:layout_height="@dimen/twenty_dp"
                android:layout_marginEnd="@dimen/four_dp"
                app:srcCompat="@drawable/ic_road" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obstacle"
                android:textColor="@color/darkGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </org.apmem.tools.layouts.FlowLayout>

</androidx.constraintlayout.widget.ConstraintLayout>