<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baseWhite"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="It's on Sunday, 8 December 2019\n20 : 30"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/h2"
            app:layout_constraintBottom_toTopOf="@id/layout_qr"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qr_announce"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/h2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_qr" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_parking_zone"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@drawable/card_layout_white_top_left"
            android:padding="@dimen/twelve_dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_parking_zone_name"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Welcome to Mall Centre Point (Medan)"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Jl. Jawa No.8, Gg. Buntu, Kec. Medan Timur, Kota Medan, Sumatera Utara 20232"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/h4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_parking_zone_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_generate_qr"
            style="@style/NoCaps"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="160dp"
            android:background="@drawable/card_layout_purple_button_generate"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/twenty_dp"
            android:text="@string/generate_qr"
            android:textColor="@color/white"
            android:textSize="@dimen/h_medium"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/layout_parking_zone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_qr"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="@drawable/card_layout_right"
            android:paddingTop="@dimen/twenty_dp"
            android:paddingBottom="@dimen/twenty_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/iv_qrcode"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_qrcode"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_qrcode"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/qrcodescan_blue"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>